# darling-apr

./: .gitignore  CMakeLists.txt  README.md
apr-util/apr-util/: CMakeLists.txt
apr-util/apr-util/include/private/: apu_config.h
apr/apr/: CMakeLists.txt
apr/apr/file_io/unix/: readwrite.c
apr/apr/include/: apr.h  apr_errno.h
apr/apr/include/arch/unix/: apr_private.h
darling/include/apr-1/: apr.h  apr_allocator.h  apr_anylock.h  apr_atomic.h  apr_base64.h  apr_buckets.h  apr_crypto.h  apr_date.h  apr_dbd.h  apr_dbm.h  apr_dso.h  apr_env.h  apr_errno.h  apr_escape.h  apr_file_info.h  apr_file_io.h  apr_fnmatch.h  apr_general.h  apr_getopt.h  apr_global_mutex.h  apr_hash.h  apr_hooks.h  apr_inherit.h  apr_ldap.h  apr_ldap_init.h  apr_ldap_option.h  apr_ldap_rebind.h  apr_ldap_url.h  apr_lib.h  apr_md4.h  apr_md5.h  apr_memcache.h  apr_mmap.h  apr_network_io.h  apr_optional.h  apr_optional_hooks.h  apr_poll.h  apr_pools.h  apr_portable.h  apr_proc_mutex.h  (+31 more)
